# RustGame

./: README.md  RustGame.MD  index.html
docs/: LEARNING_PATH.md  LEARNING_RUST.md  PHASE_1_FOUNDATION.md  PHASE_2_ADVANCED.md
my_game_project/: Cargo.toml  DEPLOYMENT.md  README.md  game_37035d77-a0a6-48ea-adf7-2d1539d06cf1.json  game_87d5be99-b532-4793-92f0-accc7b820c24.json  game_95ca5e2d-378a-4261-a3cb-af99e4eb8e70.json  history_37035d77-a0a6-48ea-adf7-2d1539d06cf1.json  history_87d5be99-b532-4793-92f0-accc7b820c24.json  history_95ca5e2d-378a-4261-a3cb-af99e4eb8e70.json  render.yaml  run_server.ps1
my_game_project/client/: index.html
my_game_project/client-deploy/: .gitignore  README.md  index.html
my_game_project/src/: error.rs  game.rs  history.rs  lib.rs  main.rs  server_main.rs
my_game_project/src/ai/: minimax.rs  mod.rs
my_game_project/src/player/: human_player.rs  mod.rs  player_type.rs
my_game_project/src/server/: handlers.rs  mod.rs  routes.rs  state.rs
src/models/: errors.rs  game_state.rs  mod.rs
