[package]
name = "my_game_project"
version = "0.1.0"
edition = "2021"
description = "A simple tic-tac-toe game in Rust"
authors = ["Your Name <your.email@example.com>"]

[lib]
name = "my_game_project"
path = "src/lib.rs"

[[bin]]
name = "tictactoe"
path = "src/main.rs"

[dependencies]
uuid = { version = "1.4", features = ["v4", "serde"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
