[package]
name = "my_game_project"
version = "0.1.0"
edition = "2021"
description = "A simple tic-tac-toe game in Rust"
authors = ["James Perram <jamesperram@gmail.com>"]

[lib]
name = "my_game_project"
path = "src/lib.rs"

[[bin]]
name = "tictactoe"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server_main.rs"

[dependencies]
uuid = { version = "1.4", features = ["v4", "serde"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["json"] }
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
